Fix bad alignment in footer links

--- a/public/stylesheets/sites/layout.css
+++ b/public/stylesheets/sites/layout.css
@@ -651,7 +651,7 @@ div#footer_pages div.left div.project p.site_name a {color:#B3B3B3; text-decorat
 div#footer_pages div.left div.project p.site_name a:hover {color:#999999; cursor:pointer;}
 div#footer_pages div.right {width:400px; margin:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline; text-align:right;}
 div#project_layout div#footer_pages div.right {width:350px; margin:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline; text-align:right;}
-div#footer_pages div.right ul {margin:5px 0 0 0; padding:0; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;  text-align: right;}
+div#footer_pages div.right ul {margin:5px 0 0 0; padding:0; text-align: right;}
 div#footer_pages div.right ul li {margin:0 0 0 6px; padding:0; font:normal 13px "PT Sans"; color:#B3B3B3; display:inline-block; vertical-align:top; display:-moz-inline-stack; zoom:1; *display:inline;  text-align: right;}
 div#footer_pages div.right ul li a {color:#B3B3B3;text-decoration:underline;   text-align: right;}
 div#footer_pages div.right ul li a:hover {color:#999999; cursor:pointer;}
